fixed caption spacing/responsive sizing, added new photos

--- a/_sass/components/_layout.scss
+++ b/_sass/components/_layout.scss
@@ -61,16 +61,27 @@
   border-top: 2px dashed #e7e7e7;
 }
 
-img + .caption {
-  display: block;
-  background-color: rgba(0, 0, 0, 0.05);
-  color: rgba(0, 0, 0, 0.5);
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  margin: -2.25em 0 2em;
-  padding: 1em;
-  font-style: italic;
-  font-size: 0.85em;
+.image-caption {
+  text-align: center;
+  max-width: 800px;
+  margin: 2rem auto 2rem;
+  img {
+    margin: 0;
+  }
+  img, .caption {
+    width: 100%;
+  }
+  .caption {
+    background-color: rgba(0, 0, 0, 0.05);
+    color: rgba(0, 0, 0, 0.5);
+    text-align: left;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    margin: 0 auto;
+    padding: 1rem;
+    font-style: italic;
+    font-size: 0.85em;
+  }
 }
 
 .italic {
